--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "connected-react-router": "^6.8.0",
+    "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
